// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi line metadata 1`] = `
Array [
  Object {
    "date": Array [
      "2019-01-02 12:00",
    ],
    "tags": Array [
      "Programming",
      "Testing",
    ],
    "title": Array [
      "Test title 2",
    ],
  },
  "Dolor sed viverra ipsum nunc aliquet bibendum enim.
In massa tempor nec feugiat.
Nunc aliquet bibendum enim
facilisis gravida.",
]
`;

exports[`No metadata 1`] = `
Array [
  Object {},
  "Egestas egestas fringilla phasellus faucibus
scelerisque eleifend. Sagittis orci a
scelerisque purus semper eget duis.",
]
`;

exports[`Single line metadata 1`] = `
Array [
  Object {
    "date": Array [
      "2019-01-01 12:00",
    ],
    "tag": Array [
      "Programming",
    ],
    "title": Array [
      "Test title",
    ],
  },
  "Lorem ipsum dolor sit amet,
consectetur adipiscing elit,
sed do eiusmod tempor incididunt
ut labore et dolore magna aliqua.",
]
`;

exports[`Whitespace before metadata 1`] = `
Array [
  Object {
    "date": Array [
      "2019-01-03 12:00",
    ],
    "tags": Array [
      "Programming",
      "Testing",
      "Whitespace",
    ],
    "title": Array [
      "Test title 3",
    ],
  },
  "Nisl nunc mi ipsum faucibus vitae aliquet nec ullamcorper.
Amet luctus venenatis lectus magna fringilla.
Volutpat maecenas volutpat blandit aliquam etiam erat velit scelerisque in.",
]
`;
